--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="" lang='en'>
+<html lang='pt'>
 
 	<head>
 		<meta charset='utf-8'>
-		<meta name='viewport' content='width=device-width,initial-scale=1.0'>
+		<meta name='viewport' content='width=device-width,initial-scale=1.0, minimum-scale=1,maximum-scale=1'>
 		<meta name='theme-color' content='#333333'>
 		<meta name="description" content="Work Attack Blog">
 		<title>WAB - WorkAttack Blog</title>
